Ideographic comma and full-stops are mishandled in linebreak https://bugs.webkit.org/show_bug.cgi?id=87041

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Test: fast/text/line-breaks-after-ideographic-comma-or-full-stop-2.html

Specifically, line breaks were always allowed after an ideographic comma or full stop, even
before a closing bracket.

* rendering/break_lines.cpp:
(WebCore::shouldBreakAfter): Removed code that unconditionally allowed line breaks after
ideographic commas and full stops, which was added for <http://webkit.org/b/17411> to work
around an issue in Unicode 5.0. Current line break iterator implementations are based on
newer versions of Unicode, which do not have that issue, so we can use them instead of the
hardcoded approximate rule.

LayoutTests:

* fast/text/line-breaks-after-ideographic-comma-or-full-stop-2-expected.txt: Added.
* fast/text/line-breaks-after-ideographic-comma-or-full-stop-2.html: Added.



Canonical link: https://commits.webkit.org/107236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120624 268f45cc-cd09-0410-ab3c-d52691b4dbfc